tests/errors/unsatisfied-requirement.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint G+1 >= G+2
   ┌─ tests/errors/unsatisfied-requirement.fil:11:16
   │
11 │   m0 := M<G+1>(left, right);
   │                ^^^^ source is available for @[G, G+1]
   │
   ┌─ ./primitives/core.fil:25:13
   │
25 │     @[G, L] left: #WIDTH,
   │             ---- destination's requirement @[G+1, G+2]
   │
   = assignment violates constraint: G=0

error: Cannot prove constraint G+2 >= G+4
   ┌─ tests/errors/unsatisfied-requirement.fil:12:9
   │
12 │   out = m0.out;
   │   ---   ^^^^^^ source is available for @[G+1, G+2]
   │   │      
   │   destination's requirement @[G+3, G+4]
   │
   = assignment violates constraint: G=0

Compilation failed with 2 errors.
